Added missing colour swatches to guide
- Also split tints and brand tints

--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -186,11 +186,16 @@ pre {
     &.swatch--brand--generous-green     { background-color: #00553F; color: @white; }
     &.swatch--brand--generous-mauve     { background-color: #B5AFD7; }
 
+    &.swatch--beta--heritage-blue-lighter        { background-color: @heritage-blue-lighter; }
+    &.swatch--beta--heritage-blue-lightest       { background-color: @heritage-blue-lightest; }
+    &.swatch--beta--heritage-yellow-lighter      { background-color: @heritage-yellow-lighter; }
+    &.swatch--beta--heritage-yellow-darker       { background-color: @heritage-yellow-darker; }
+
     &.swatch--beta--red                 { background-color: @red; color: @white; }
     &.swatch--beta--red-light           { background-color: @red-light; color: @white; }
     &.swatch--beta--red-lighter         { background-color: @red-lighter; color: @black; }
     &.swatch--beta--pink                { background-color: @pink; }
-    &.swatch--beta--orange              { background-color: @orange; }
+    &.swatch--beta--orange              { background-color: @orange; color: @white; }
     &.swatch--beta--orange-light        { background-color: @orange-light; }
     &.swatch--beta--orange-lighter      { background-color: @orange-lighter; }
     &.swatch--beta--green               { background-color: @green; color: @white; }
@@ -204,9 +209,8 @@ pre {
     &.swatch--beta--aqua-light          { background-color: @aqua-light; }
     &.swatch--beta--yellow              { background-color: @yellow; }
     &.swatch--beta--yellow-light        { background-color: @yellow-light; }
-    &.swatch--beta--yellow-darker        { background-color: @heritage-yellow-darker; }
     &.swatch--beta--purple              { background-color: @purple; }
-    &.swatch--beta--purple-dark         { background-color: @purple-dark; }
+    &.swatch--beta--purple-dark         { background-color: @purple-dark; color: @white; }
 
     &.swatch--mono--black               { background-color: @black; color: @white; }
     &.swatch--mono--gray0               { background-color: @gray-0; color: @white; }
