--- a/libs/styleguide/guide.less
+++ b/libs/styleguide/guide.less
@@ -124,6 +124,18 @@ ol li, ul li {
         padding: 0 2em; 
     }
 }
+.example-box-plain {
+    color: #333;
+    padding: 20px;
+    margin: 1em 0 1em;
+    line-height: 1.7em;
+    border: 1px solid #dfe1e3;
+    border-radius: 2px;
+    code {
+        color: @gray-4;
+        padding: 0 2em; 
+    }
+}
 span.code {
     color: #333;
     padding: 5px;
