New consumer-nav page
- Updated consumer nav based on research findings
- Removed sticky nav
- Moved sidebar to right

--- a/libs/base/framework.less
+++ b/libs/base/framework.less
@@ -96,6 +96,9 @@
     flex-grow: 2;
 }
 
+/* Commented out because it breaks the grid by overriding the
+   width of every column beneath it...
+   
 .flex-row > * {
     margin: .5em 1%;
     margin: calc(.5em);
@@ -103,6 +106,7 @@
     width: calc( ~"@{width-span-12} - 1em" );
     float: left;
 }
+*/
 
 .flex-column {
     display: -ms-flexbox;
