--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -86,6 +86,12 @@
     	);
     }
 
+    &--related {
+        .callout( @gray-8, @inventive-teal, @callout-border: @inventive-teal );
+        //.callout--border;
+        .callout--border--top;
+    }
+
 }
 
 .box--warning {
@@ -181,7 +187,7 @@
 
 // Progress panel - for instructional information, primarily used for 'Next stages'.
 .dap-panel--progress {
-    .callout( @gray-8, @inventive-teal, @callout-border: @inventive-teal ); // .callout--generous
+    .callout( @gray-8, @inventive-teal, @callout-border: @inventive-teal );
     //.callout--border;
     .callout--border--top;
 }
