--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -6,7 +6,7 @@
 
 .main-content__sidebar {
     float: left;
-    clear: left;
+    //clear: left;
     width: @width-span-4;
     overflow: hidden; // Stop margin collapsing issues
     margin-bottom: @box-spacing*1.5;
@@ -17,6 +17,49 @@
         float: none;
         width: auto;
         margin-top: @box-spacing*1.5;
+    }
+}
+
+.side-nav-beta {
+    .main-content__sidebar;
+    margin: @box-spacing 0;
+    
+    ul {
+        list-style: none;
+        padding: 0;
+    }
+    li {
+        padding: 0;
+        margin: 0;
+        a {
+            margin-bottom: 1px;
+            padding: @box-spacing-vertical @box-spacing-horizontal;
+            display: block;
+            border-bottom: none;
+        }
+
+    }
+
+    &__heading {
+        background-color: @inventive-teal;
+        a {
+            color: @white;
+        }
+    }
+
+    &__sibling {
+        //background-color: @gray-8;
+        a {
+        }
+        &:hover {
+            background-color: @gray-8;
+        }
+    }
+    .active a {
+        background-color: @white;
+        cursor: default;
+        border-left: @box-spacing/2 solid @inventive-teal;
+        font-weight: @font-weight-boldest;
     }
 }
 
