Added page details

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -2,6 +2,19 @@
  * MAIN CONTENT WRAPPER
  */
 
+ .title__subheading {
+    margin-bottom: 1rem;
+    font-size: @font-size-small;
+    color: @gray-2;
+    .badge--extent {
+        .badge;
+        background-color: @white;
+        border: 1px solid @blue-light;
+        border-radius: @form-border-radius;
+        font-weight: @font-weight-bolder;
+    }
+ }
+
 .main-content{
     .limit-width;
     .clearfix;
