Fixed title__subheading extent

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -6,12 +6,12 @@
     margin-bottom: 1rem;
     font-size: @font-size-small;
     color: @gray-2;
-    .badge--extent {
-        .badge;
-        background-color: @white;
-        border: 1px solid @blue-light;
+    .btn {
+        padding: .3em .5em;
         border-radius: @form-border-radius;
         font-weight: @font-weight-bolder;
+        cursor: pointer;
+        color: @heritage-blue;
     }
  }
 
