--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -31,6 +31,7 @@
     li {
         padding: 0;
         margin: 0;
+        border-left: @box-spacing/2 solid @gray-6;
         a {
             margin-bottom: 1px;
             padding: @box-spacing-vertical @box-spacing-horizontal;
@@ -41,26 +42,25 @@
     }
 
     &__heading {
-        background-color: @inventive-teal;
         a {
-            color: @white;
+            color: @heritage-blue;
+            font-weight: @font-weight-boldest;
+            font-size: @font-size-medium;
         }
     }
 
     &__sibling {
-        //background-color: @gray-8;
         span {
-            border-bottom: 1px solid;
+            border: none;
         }
         &:hover {
             background-color: @gray-8;
         }
     }
     .active {
-        background-color: @gray-8;
-        color: @inventive-teal;
-        //border-left: @box-spacing/2 solid @inventive-teal;
+        background-color: @heritage-blue-lightest;
         font-weight: @font-weight-bolder;
+        border-color: @heritage-blue-lighter;
         a {
             cursor: default;            
         }
