Increased spacing on main content

--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -31,7 +31,7 @@
     &__right {
         float: left;
         width: @width-span-8;
-        padding-right: 2em;
+        padding-right: @box-spacing*6;
 
         @media ( max-width: @screen-xs-max ) {
             float: none;
