--- a/libs/modules/main-content.less
+++ b/libs/modules/main-content.less
@@ -3,7 +3,11 @@
  */
 
  .title__subheading {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    padding: 1rem 0 1rem 0;
+    border-top: @gray-7 1px solid;
+    border-bottom: @gray-7 1px solid;
     font-size: @font-size-small;
     color: @gray-2;
     .btn {
