--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -31,7 +31,7 @@
     li {
         padding: 0;
         margin: 0;
-        border-left: @box-spacing/2 solid @gray-6;
+        //border-left: @box-spacing/2 solid @gray-6;
         a {
             margin-bottom: 1px;
             padding: @box-spacing-vertical @box-spacing-horizontal;
