Print stylesheet and revealable
- Created print stylesheet
- Created new mixin for revealables (existing collapse syntax)
-  Updated revealable css using new mixin

--- a/libs/modules/callout.less
+++ b/libs/modules/callout.less
@@ -131,7 +131,7 @@
   .callout--border--left;
 }
 
-// Obsolete
+/* Obsolete
 .sideContent:extend( .box all ) {
 
     & > h3 {
@@ -163,7 +163,7 @@
         margin: 0;
         font-size: 1.6em;
     }
-}
+}*/
 
 /**
  * PANELS
