--- a/libs/base/type.less
+++ b/libs/base/type.less
@@ -79,22 +79,22 @@ h2 {
 
 h3 {
     font-size:      @font-size-h3;
-    font-weight:    @font-weight-bold !important;
+    font-weight:    @font-weight-bold;
 }
 
 h4 {
     font-size:      @font-size-h4;
-    font-weight:    @font-weight-bold !important;
+    font-weight:    @font-weight-bold;
 }
 
 h5 {
     font-size:      @font-size-h5;
-    font-weight:    @font-weight-bold !important;
+    font-weight:    @font-weight-bold;
 }
 
 h6 {
     font-size:      @font-size-h5;
-    font-weight:    @font-weight-bold !important;
+    font-weight:    @font-weight-bold;
 }
 
 h1 + h2,
