--- a/libs/modules/revealable.less
+++ b/libs/modules/revealable.less
@@ -6,17 +6,7 @@
  */
 
  .main-container {
-    .revealable {
-        border: 1px solid @gray-6;
-
-    }
-
-    h3.revealable__heading {
-        font-size: @font-size-h4;
-        outline: none;
-    }
-    
-    .revealable__close {
-        text-decoration: none;
+    .revealable{
+        .revealable();
     }
 }
