--- a/public/css/chat-styles.css
+++ b/public/css/chat-styles.css
@@ -120,19 +120,19 @@ h2 {
 }
 h3 {
   font-size: 1.3rem;
-  font-weight: 600 !important;
+  font-weight: 600;
 }
 h4 {
   font-size: 1rem;
-  font-weight: 600 !important;
+  font-weight: 600;
 }
 h5 {
   font-size: 1rem;
-  font-weight: 600 !important;
+  font-weight: 600;
 }
 h6 {
   font-size: 1rem;
-  font-weight: 600 !important;
+  font-weight: 600;
 }
 h1 + h2,
 h2 + h3,
