Extent switcher modal

--- a/libs/site.less
+++ b/libs/site.less
@@ -79,3 +79,5 @@
 @import "modules/page-list";
 @import "modules/page-tree";
 @import "modules/share-bar";
+@import "modules/extent-switcher-modal";
+
