Removed collapse, replaced with revealable
- Created new revealable mixin to replace collapse mixin
-  Improved mixin to work on both new and existing html syntax
- Huge style adjustments
- Improved mixin to use the same variable layout as callouts
- Deleted modules/collapse
- Renamed mixins/collapse to mixins/revealables
- Added existing html mockup to collapse.html

--- a/libs/site.less
+++ b/libs/site.less
@@ -24,7 +24,7 @@
 @import "mixins/fit-content";
 @import "mixins/flex-box";
 @import "mixins/limit-width";
-@import "mixins/collapse";
+@import "mixins/revealable";
 @import "mixins/popup";
 
 /* Module files */
@@ -39,7 +39,6 @@
 @import "modules/breadcrumb";
 @import "modules/cab-forms";
 @import "modules/callout";
-@import "modules/collapse";
 @import "modules/revealable";
 @import "modules/tablesort";
 @import "modules/nav-steps";
