--- a/libs/modules/revealable.less
+++ b/libs/modules/revealable.less
@@ -1,12 +1,58 @@
 ﻿/**
  * REVEALABLE
  *
- * Beta revealable headers.
- *
+ * Creates various revealable styles using mixin
+ * .revealable( @revealable-background, @revealable-headings, @revealable-border )
+ * Whole revealable can be automatically calculated by entering only one colour.
  */
 
- .main-container {
-    .revealable{
-        .revealable();
+.collapsible, // This needs to be removed eventually
+.revealable {
+    .revealable();
+
+    &--aqua {
+        .revealable( 
+            @aqua
+        ) 
     }
+
+    &--green {
+        .revealable( 
+            @green-light, 
+            @green
+        ) 
+    }
+
+    &--red {
+        .revealable( 
+            @red-lighter,
+            @red
+        ) 
+    }
+}
+
+
+// Accordions
+.accordion .group {
+    background: @white;
+    margin-bottom: 1em;
+}
+.accordion h3 {
+    margin: @box-spacing-horizontal @box-spacing-vertical 0 @box-spacing-vertical;
+    padding: @box-spacing-vertical @box-spacing-horizontal @box-spacing-vertical @box-spacing-horizontal*1.5;
+    cursor: pointer;
+
+    .no-js & {
+        cursor: default;
+    }
+
+    & > img:first-child {
+        position: absolute;
+        margin-left: -1.7em;
+        margin-top: .1em;
+    }
+}
+
+.accordionContent {
+    padding: 0 @box-spacing-horizontal @box-spacing-vertical @box-spacing-horizontal;
 }
