Vertical-align mixin
- Created vertical-align mixin
- Used vertical-align mixin inside revealable mixin

--- a/libs/mixins/revealable.less
+++ b/libs/mixins/revealable.less
@@ -46,12 +46,8 @@
             font-family: 'FontAwesome';
             content: "\f067";
             padding: 0 @box-spacing-horizontal*1.25;
-
-            position: absolute;
-            top: 50%;
+            .vertical-align(absolute);
             right: 0;
-            float: right;
-            transform: translateY(-50%);
         }
         *:last-child {
             margin-bottom: 0;
