--- a/libs/site.less
+++ b/libs/site.less
@@ -26,6 +26,7 @@
 @import "mixins/limit-width";
 @import "mixins/revealable";
 @import "mixins/popup";
+@import "mixins/vertical-align";
 
 /* Module files */
 @import "modules/header";
