Added vertical-align to .extent-overlay

--- a/libs/modules/extent-switcher-modal.less
+++ b/libs/modules/extent-switcher-modal.less
@@ -52,6 +52,7 @@
 .extent-overlay {
   width: 80%;
   max-width: 50em;
+  .vertical-align;
   .row::before, .row::after {
     content: "";
     display: table;
