--- a/libs/modules/nav-steps.less
+++ b/libs/modules/nav-steps.less
@@ -39,6 +39,11 @@
     }
 }
 
+
+/**
+ * Sticky navigation
+ */
+
 .steps--navigation {
     .callout( @heritage-blue-lightest, @callout-background: @white );
     .callout--border;
