--- a/libs/modules/title.less
+++ b/libs/modules/title.less
@@ -18,12 +18,12 @@
     // We need to use flexbox to change the order
     
     .title {
-        .flex;
-        .flex-direction(column-reverse);
+        //.flex;
+        //.flex-direction(column-reverse);
         
         // Flex does not do margin collapsing - reduce margin to compensate
         & > h1 {
-            margin-bottom: .1em;
+            //margin-bottom: .1em;
         }
     }
 
