--- a/libs/base/print.less
+++ b/libs/base/print.less
@@ -9,74 +9,193 @@
 @import "../mixins/callout";
 @import "../modules/callout";
 
-@media print {
-	.print-only {
-		display: block;
-	}
+* {
+	background: transparent;
+	color: black;
+	text-shadow: none;
+	filter: none;
+	-ms-filter: none;
+}
 
-    a {
-    	border: none;
-    	text-decoration: underline;
-	    &:after {
-	    	content: " (" attr(href) ") " !important;
-	    	font-size: 0.8em !important;
-	    	font-weight: normal !important;
-	    	color: @gray-4 !important;
-	    }
-	    &.main-header__logo:after {
-	    	content: "" !important;
-	    }
-	}
+.no-print {
+	display: none !important;
+}
 
-	.no-print,
-	.section-notice,
-	.collapse-toggle-close,
-	.revealable__close,
-	nav,
-	aside {
-		display: none;
-	}
+.print-only {
+	display: block !important;
+}
 
-	h1,	h2,	h3,	h4,	h5,	h6 {
-	    line-height:    @line-height-heading !important;
-	    font-weight:    @font-weight-bolder !important;
-	    margin-top:     1em !important;
-	    margin-bottom:  0em !important;
-	}
+.print-only.logo {
+	display: block;
+	margin-bottom: @box-spacing;
+}
 
-	h1 {
-	    font-size:      @font-size-h1 !important;
-	    font-weight:    @font-weight-boldest !important;
+a {
+	border: none;
+	text-decoration: underline;
+    &:after {
+    	content: " (" attr(href) ") ";
+    	font-size: 0.8em;
+    	font-weight: normal;
+    	color: @gray-4;
+    }
+    &.main-header__logo:after,
+	&[href^="javascript:"]:after,
+	&[href^="#"]:after {
+    	content: "";
+    }
+    img {
+		border-style: none;
 	}
+}
 
-	h2 {
-	    font-size:      @font-size-h2 !important;
-	    font-weight:    @font-weight-bold !important;
-	}
+abbr[title]:after {
+	content: " (" attr(title) ")";
+}
 
-	h3 {
-	    font-size:      @font-size-h3 !important;
-	    font-weight:    @font-weight-bold !important;
-	}
+.ir a:after {
+	content: "";
+}
 
-	h4 {
-	    font-size:      @font-size-h4 !important;
-	    font-weight:    @font-weight-bold !important;
-	}
+.main-nav,
+.skip-nav,
+#epi-quickNavigator,
+.extent-switcher,
+.main-nav,
+.main-header__links,
+.main-breadcrumb,
+.main-footer,
+.share-bar,
+.screenreader,
+.ref-heading__toggle,
+.main-content__sidebar,
+.no-print,
+.section-notice,
+.collapse-toggle-close,
+.revealable__close,
+#overview,
+nav,
+aside {
+	display: none;
+}
 
-	h5 {
-	    font-size:      @font-size-h5 !important;
-	    font-weight:    @font-weight-bold !important;
-	}
+.revealable,
+.collapse,
+.callout--heritage,
+.callout--responsible,
+.callout--inventive,
+.callout--generous {
+	border: 1px solid @gray-5;
+	padding: @box-spacing;
+	margin: @box-spacing 0;
+}
 
-	h6 {
-	    font-size:      @font-size-h5 !important;
-	    font-weight:    @font-weight-bold !important;
-	}
+.accordionContent,
+.collapse-content,
+.revealable__content {
+	display: block !important;
+}
 
-	.collapse-content,
-	.revealable__content {
-		border: 1px solid black;
-		padding: @box-spacing;
-	}
+pre, blockquote {
+	border: 1px solid #999;
+	page-break-inside: avoid;
+}
+thead {
+	display: table-header-group;
+}
+
+tr, img {
+	page-break-inside: avoid;
+}
+img {
+	max-width: 100%;
+}
+
+@page {
+	margin: 0.5cm;
+}
+
+p, h2, h3 {
+	orphans: 3;
+	widows: 3;
+}
+
+h2, h3 {
+	page-break-after: avoid;
+}
+
+li, dt, dd {
+	margin-bottom: 10px;
+}
+
+small {
+	font-size: 0.8em;
+}
+
+body {
+	font-size: 14px !important;
+}
+
+p {
+	font-size: 1em;
+}
+
+.page-owner-container ul {
+	list-style: none;
+	padding-left: 0;
+	margin-left: 0;
+}
+
+table {
+	text-align: left;
+	border: 1px solid #000;
+	border-collapse: collapse;
+	width: 100% !important;
+}
+
+table ul, table ol {
+	margin-left: 0;
+}
+
+th, td {
+	padding: 4px;
+	border: 1px solid #000;
+	vertical-align: top;
+}
+
+th {
+	border-bottom: 2px solid #333333;
+}
+
+.page-image {
+	margin: 20px 0;
+}
+
+.content-meta i {
+	margin-right: 10px;
+}
+
+@page {
+	size: auto;
+	margin: 20mm 20mm 20mm 20mm;
+}
+
+.calls-for-evidence-container {
+	display: none !important;
+}
+
+.content-meta i, .page-owner-container i {
+	display: none !important;
+}
+
+img[src="/Global/Migrated_Images/bmis/dl-icon.gif"] {
+	display: none !important;
+}
+
+.articleContent a img, .articleContent a img + span {
+	display: none !important;
+}
+
+.toc-legacy__num {
+	padding-left: 1em;
 }
