Update modal and links styling

--- a/libs/base/forms.less
+++ b/libs/base/forms.less
@@ -17,9 +17,16 @@
 }
 .btn-primary {
     color: @heritage-blue;
-    background-color: @brand-secondary;
+    background-color: @aqua;
     &:hover {
-        background-color: darken(@brand-secondary, 10%);
+        background-color: darken(@aqua, 10%);
+    }
+}
+.btn-primary-light {
+    color: @heritage-blue;
+    background-color: @aqua-light;
+    &:hover {
+        background-color: @aqua;
     }
 }
 .btn-secondary {
