--- a/libs/existing/inc/main-content.less
+++ b/libs/existing/inc/main-content.less
@@ -27,7 +27,7 @@
 
 @media (max-width: @max-page-width-before-the-share-bar-ruins-it-all) and (min-width: @screen-sm-min) {
     .js .main-content {
-        padding-right: 3.5em;
+        padding-right: 3.5em; // used so sharing buttons don't overlap, when updated change remove this
     }
 }
 
