--- a/libs/modules/extent-switcher-modal.less
+++ b/libs/modules/extent-switcher-modal.less
@@ -5,11 +5,39 @@
  *
  */
 
+.modal {
+        position: fixed;
+        padding: 10% 20% 0 20%;
+        background: #fff;
+        z-index: 100;
+        opacity: 0;
+        pointer-events: none;
+        -webkit-transition: all 0.25s ease-out;
+        -moz-transition: all 0.25s ease-out;
+        -ms-transition: all 0.25s ease-out;
+        -o-transition: all 0.25s ease-out;
+        transition: all 0.25s ease-out;
+        background: rgba(0, 0, 0, 0) url("../assets/images/popup-background.png") repeat scroll 0 0;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        overflow: scroll;
+    @media (max-width: @screen-xs-max ){
+        padding: 5% 5% 0 5%;
+    }
+}
+.modal.show {
+  opacity: 1;
+        pointer-events: auto;
+}
 
 .extent-country-select {
   width: @width-span-12;
   background-color: @heritage-blue-lightest;
-  padding: @box-spacing-horizontal*.5;
+  padding: @box-spacing-horizontal*1.5;
   margin-top: @box-spacing*.5;
   h2 {
     font-size: @font-size-base;
