--- a/public/css/chat-styles.css
+++ b/public/css/chat-styles.css
@@ -159,7 +159,7 @@ small {
 a {
   color: #253460;
   text-decoration: none;
-  border-bottom: 0.0625rem solid #ccd4eb;
+  border-bottom: 0.0625rem solid #a7b5dd;
 }
 a:hover,
 a:focus {
@@ -363,3 +363,4 @@ textarea {
   background: #004b88;
   color: #ffffff;
 }
+/*# sourceMappingURL=chat-styles.css.map */
