--- a/public/css/print.css
+++ b/public/css/print.css
@@ -1814,6 +1814,7 @@ a.main-header__logo:after,
 a[href^="javascript:"]:after,
 a[href^="#"]:after {
   content: "";
+  text-decoration: none;
 }
 a img {
   border-style: none;
@@ -1842,8 +1843,12 @@ abbr[title]:after {
 .revealable__close,
 #overview,
 nav,
-aside {
+aside,
+.title__subheading .btn {
   display: none;
+}
+.callout* {
+  page-break-inside: avoid;
 }
 .revealable,
 .collapse,
@@ -1854,6 +1859,7 @@ aside {
   border: 1px solid #bfbfbf;
   padding: 1rem;
   margin: 1rem 0;
+  page-break-inside: avoid;
 }
 .accordionContent,
 .collapse-content,
@@ -1862,7 +1868,7 @@ aside {
 }
 pre,
 blockquote {
-  border: 1px solid #999;
+  border: 1px solid #9f9f9f;
   page-break-inside: avoid;
 }
 thead {
@@ -1909,7 +1915,7 @@ p {
 }
 table {
   text-align: left;
-  border: 1px solid #000;
+  border: 1px solid #000000;
   border-collapse: collapse;
   width: 100% !important;
 }
@@ -1920,11 +1926,11 @@ table ol {
 th,
 td {
   padding: 4px;
-  border: 1px solid #000;
+  border: 1px solid #000000;
   vertical-align: top;
 }
 th {
-  border-bottom: 2px solid #333333;
+  border-bottom: 2px solid #404040;
 }
 .page-image {
   margin: 20px 0;
