Update links styling

--- a/libs/base/icons.less
+++ b/libs/base/icons.less
@@ -131,6 +131,9 @@
     border-bottom: 0.0625rem solid @white;
     font-size: 175%;
 }
+a.a-social-google-plus, a.a-social-facebook, a.a-social-twitter, a.a-social-whatsapp, a.a-social-print, a.a-social-references, a.a-social-email {
+        border-bottom: none;
+}
 .a-social-facebook:before {
     content: "\f230";
     color: @facebook-brand-colour;
