--- a/public/css/site.css
+++ b/public/css/site.css
@@ -3592,6 +3592,15 @@ input.custom-dropdown__button {
   border-bottom: 0.0625rem solid #ffffff;
   font-size: 175%;
 }
+a.a-social-google-plus,
+a.a-social-facebook,
+a.a-social-twitter,
+a.a-social-whatsapp,
+a.a-social-print,
+a.a-social-references,
+a.a-social-email {
+  border-bottom: none;
+}
 .a-social-facebook:before {
   content: "\f230";
   color: #3b579d;
