Added CSS for gh-pages pull

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -2015,6 +2015,7 @@ textarea,
 input[type=text],
 input[type=password],
 input[type=email],
+input[type=number],
 input[type=search] {
   padding: .2em;
   width: 100%;
@@ -2285,6 +2286,21 @@ input[type="file"]::before {
 .checkbox,
 .radio {
   display: inline-block;
+}
+input[id*="dob-"],
+input[class*="dob-"] {
+  padding: .2em;
+  border-radius: 2px;
+  display: inline-block;
+}
+.form-group-date {
+  width: 5rem;
+  display: inline-block;
+  float: left;
+  margin-right: 1rem;
+}
+.form-group-date:last-child {
+  margin: 0;
 }
 *:disabled,
 .disabled {
