--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -34,7 +34,7 @@
         //border-left: @box-spacing/2 solid @gray-6;
         a {
             margin-bottom: 1px;
-            padding: @box-spacing-vertical @box-spacing-horizontal;
+            padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75;
             display: block;
             border-bottom: none;
         }
